--- a/workers/kairos/fly.toml
+++ b/workers/kairos/fly.toml
@@ -1,22 +1,10 @@
-# fly.toml app configuration file generated for kairos-worker on 2025-11-06T13:14:49+01:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
+app = "kairos-worker"
+primary_region = "fra"
 
-app = 'kairos-worker'
-primary_region = 'fra'
 [build]
-  dockerfile = "Dockerfile"
-
-[http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+  dockerfile = "workers/kairos/Dockerfile"
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+  cpu_kind = "shared"
+  cpus     = 1
+  memory   = "1gb"
