--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,27 @@
-# (paste the file above)
+name: deploy-all-workers
+
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - app: kairos-worker
+            config: workers/kairos/fly.toml
+          - app: napoleon-worker
+            config: workers/napoleon/fly.toml
+          # add more workers here
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Deploy ${{ matrix.app }}
+        uses: superfly/flyctl-actions@v2.1.0
+        with:
+          args: deploy --remote-only --app ${{ matrix.app }} --config ${{ matrix.config }}
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
