fix kairos fly.toml: correct Dockerfile path

--- a/workers/kairos/fly.toml
+++ b/workers/kairos/fly.toml
@@ -2,7 +2,7 @@ app = "kairos-worker"
 primary_region = "fra"
 
 [build]
-  dockerfile = "workers/kairos/Dockerfile"
+  dockerfile = "Dockerfile"
 
 [[vm]]
   cpu_kind = "shared"
