--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Deploy ${{ matrix.app }}
         uses: superfly/flyctl-actions@1.4      # stable tag
         with:
-          args: deploy --remote-only --app ${{ matrix.app }} --config ${{ matrix.config }} --path .
+          args: deploy --remote-only --app ${{ matrix.app }} --config ${{ matrix.config }} .
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
