--- a/workers/napoleon/fly.toml
+++ b/workers/napoleon/fly.toml
@@ -2,7 +2,7 @@ app = "napoleon-worker"
 primary_region = "fra"
 
 [build]
-  dockerfile = "base/Dockerfile"
+  dockerfile = "../../base/Dockerfile"
 
 [build.args]
   ENTRYPOINT_WILL_BE_REPLACED = "workers/napoleon/main.py"
