--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -9,4 +9,4 @@ RUN pip install --no-cache-dir -r /app/.base-requirements.txt
 COPY . .
 
 ARG ENTRYPOINT_WILL_BE_REPLACED
-CMD python "$ENTRYPOINT_WILL_BE_REPLACED"
+CMD ["python", "${ENTRYPOINT_WILL_BE_REPLACED}"]
