--- a/workers/napoleon/fly.toml
+++ b/workers/napoleon/fly.toml
@@ -1,12 +1,11 @@
 app = "napoleon-worker"
 primary_region = "fra"
-context = "../.."
 
 [build]
-  dockerfile = "../../base/Dockerfile"
+  dockerfile = "base/Dockerfile"
+  context    = "../.."
 
-[build.args]
-  ENTRYPOINT_WILL_BE_REPLACED = "workers/napoleon/main.py"
+command = ["python", "workers/napoleon/main.py"]
 
 [[vm]]
   cpu_kind = "shared"
