--- a/workers/kairos/fly.toml
+++ b/workers/kairos/fly.toml
@@ -2,7 +2,7 @@ app = "kairos-worker"
 primary_region = "fra"
 
 [build]
-  dockerfile = "base/Dockerfile"
+  dockerfile = "../../base/Dockerfile"
   context    = "../.."
 
 command = ["python", "workers/kairos/main.py"]
