--- a/workers/turn_receiver/fly.toml
+++ b/workers/turn_receiver/fly.toml
@@ -5,5 +5,10 @@ primary_region = "fra"
   dockerfile = "../../base/Dockerfile"
   context    = "../.."
 
-# run this file when the VM starts
-command = ["python", "workers/turn_receiver/main.py"]
+# run FastAPI server
+command = [
+  "uvicorn",
+  "workers.turn_receiver.main:app",
+  "--host", "0.0.0.0",
+  "--port", "8080"
+]
