--- a/workers/turn_receiver/fly.toml
+++ b/workers/turn_receiver/fly.toml
@@ -5,9 +5,9 @@ primary_region = "fra"
   dockerfile = "../../base/Dockerfile"
   context    = "../.."
 
-command = [
-  "uvicorn",
-  "workers.turn_receiver.main:app",
-  "--host","0.0.0.0",
-  "--port","8080"
-]
+[processes]
+  web = "uvicorn workers.turn_receiver.main:app --host 0.0.0.0 --port 8080"
+
+[[services]]
+  internal_port = 8080
+  processes     = ["web"]
