fix: run workers as modules; global install uvicorn/fastapi

--- a/workers/kairos/fly.toml
+++ b/workers/kairos/fly.toml
@@ -6,7 +6,7 @@ primary_region = "fra"
   context    = "../.."
 
 [processes]
-  app = "python workers/kairos/main.py"
+  app = "python -m workers.kairos.main"
 
 [deploy]
   min_machines_running = 1
