--- a/workers/historian/fly.toml
+++ b/workers/historian/fly.toml
@@ -6,7 +6,7 @@ primary_region = "fra"
   context    = "../.."
 
 [processes]
-  app = "python workers/historian/main.py"
+  app = "python -m workers.historian.main"
 
 [deploy]
   min_machines_running = 1
