--- a/.gitignore
+++ b/.gitignore
@@ -210,9 +210,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
-<<<<<<< HEAD
 
 # macOS
-=======
->>>>>>> ed9e509 (remove .DS_Store and ignore it)
 .DS_Store
+
+# Local secrets
+.env.private
