--- a/workers/napoleon/fly.toml
+++ b/workers/napoleon/fly.toml
@@ -1,6 +1,9 @@
 app = "napoleon-worker"
 primary_region = "fra"
 
+[env]
+  CONTENT_PACK_ENABLED = "true"
+
 [build]
   dockerfile = "../../base/Dockerfile"
   context    = "../.."
