--- a/workers/iris/fly.toml
+++ b/workers/iris/fly.toml
@@ -1,6 +1,10 @@
 app = "iris-worker"
 primary_region = "fra"
 
+[env]
+  CONTENT_PACK_ENABLED = "true"
+  IRIS_CONTROL_ENABLED = "true"
+
 [build]
   dockerfile = "../../base/Dockerfile"
   context    = "../.."
